--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "email": "web@groupdc.be"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "Dcms\\Pages\\": "/"
+        }
+    }
 }
